# nova

./: setup.cfg
etc/nova/: api-paste.ini
nova/: block_device.py  filters.py  service.py  weights.py
nova/api/: wsgi.py
nova/api/openstack/: __init__.py  wsgi.py
nova/api/openstack/compute/: routes.py  servers.py
nova/cmd/: api.py
nova/compute/: api.py  manager.py  resource_tracker.py  rpcapi.py
nova/conductor/: api.py  manager.py  rpcapi.py
nova/conf/: README.md
nova/db/main/: models.py
nova/network/: model.py  os_vif_util.py
nova/objects/: fields.py  request_spec.py
nova/pci/: utils.py
nova/scheduler/: host_manager.py  manager.py  request_filter.py  rpcapi.py  utils.py
nova/scheduler/client/: query.py  report.py
nova/scheduler/weights/: cpu.py
nova/virt/: hardware.py
nova/virt/hyperv/: driver.py  vmops.py
nova/virt/libvirt/: config.py  designer.py  driver.py  guest.py  host.py  vif.py
