[metadata]
name = nova
summary = Cloud computing fabric controller
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
url = https://docs.openstack.org/nova/latest/
project_urls =
    Bug Tracker = https://bugs.launchpad.net/nova/
    Documentation = https://docs.openstack.org/nova/
    Source Code = https://opendev.org/openstack/nova
python_requires = >=3.8
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[extras]
osprofiler =
    osprofiler>=1.4.0 # Apache-2.0
zvm =
    zVMCloudConnector>=1.3.0;sys_platform!='win32'  # Apache 2.0 License
hyperv =
    os-win>=5.5.0 # Apache-2.0
vmware =
    oslo.vmware>=3.6.0 # Apache-2.0

[files]
data_files =
    etc/nova =
        etc/nova/api-paste.ini
        etc/nova/rootwrap.conf
    etc/nova/rootwrap.d = etc/nova/rootwrap.d/*
packages =
    nova

# 对应后端接入点
[entry_points]
oslo.config.opts =
    nova.conf = nova.conf.opts:list_opts
oslo.config.opts.defaults =
    nova.conf = nova.config:set_lib_defaults
oslo.policy.enforcer =
    nova = nova.policy:get_enforcer
oslo.policy.policies =
    # The sample policies will be ordered by entry point and then by list
    # returned from that entry point. If more control is desired split out each
    # list_rules method into a separate entry point rather than using the
    # aggregate method.
    nova = nova.policies:list_rules
nova.api.extra_spec_validators =
    accel = nova.api.validation.extra_specs.accel
    aggregate_instance_extra_specs = nova.api.validation.extra_specs.aggregate_instance_extra_specs
    capabilities = nova.api.validation.extra_specs.capabilities
    hw = nova.api.validation.extra_specs.hw
    hw_rng = nova.api.validation.extra_specs.hw_rng
    hw_video = nova.api.validation.extra_specs.hw_video
    null = nova.api.validation.extra_specs.null
    os = nova.api.validation.extra_specs.os
    pci_passthrough = nova.api.validation.extra_specs.pci_passthrough
    quota = nova.api.validation.extra_specs.quota
    resources = nova.api.validation.extra_specs.resources
    traits = nova.api.validation.extra_specs.traits
    vmware = nova.api.validation.extra_specs.vmware
nova.compute.monitors.cpu =
    virt_driver = nova.compute.monitors.cpu.virt_driver:Monitor
# 控制台核心脚本输入
console_scripts =
    nova-api = nova.cmd.api:main # main api 
    nova-api-metadata = nova.cmd.api_metadata:main # 基本无用
    nova-api-os-compute = nova.cmd.api_os_compute:main # open api 服务
    nova-compute = nova.cmd.compute:main # 启动计算节点rpc 服务
    nova-conductor = nova.cmd.conductor:main  # 启动conductor rpc 服务
    nova-manage = nova.cmd.manage:main # 启动nova 管理服务
    nova-novncproxy = nova.cmd.novncproxy:main # 启动novnc 服务
    nova-policy = nova.cmd.policy:main # 启动policy 服务
    nova-rootwrap = oslo_rootwrap.cmd:main # 启动rootwrap 服务
    nova-rootwrap-daemon = oslo_rootwrap.cmd:daemon # 启动rootwrap 服务
    nova-scheduler = nova.cmd.scheduler:main # 启动scheduler rpc 服务
    nova-serialproxy = nova.cmd.serialproxy:main #  启动serialproxy 服务
    nova-spicehtml5proxy = nova.cmd.spicehtml5proxy:main # 启动spicehtml5proxy 服务
    nova-status = nova.cmd.status:main # 启动status 服务
wsgi_scripts =
    nova-api-wsgi = nova.api.openstack.compute.wsgi:init_application
    nova-metadata-wsgi = nova.api.metadata.wsgi:init_application

[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = skip
incremental = true
check_untyped_defs = true
warn_unused_ignores = true
